# wlog

./: Cargo.toml  Dockerfile  README.md  config.ini
client/: .Cargo.toml.swp  Cargo.toml
client/src/: main.rs
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
src/: main.rs  wlog.rs
worklog/: Cargo.toml
worklog/src/: lib.rs
