[package]
name = "server"
version = "0.1.0"
authors = ["sawmurai <fabian.becker@b-it-d.de>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
worklog = { path = "../worklog" }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_sqlite_pool", "json"]
