[package]
name = "worklog"
version = "0.1.0"
authors = ["sawmurai <fabian.becer@b-it-d.de>"]
edition = "2018"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]
